--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.formatting.provider": "none",
+  "python.formatting.provider": "autopep8",
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
   }
